--- a/teams-u09m-match-report.html
+++ b/teams-u09m-match-report.html
@@ -4,6 +4,7 @@
     else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
     else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
     else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
+    else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -112,6 +113,35 @@
     celebrate and acknowledge all our players for their efforts and improvements throughout the season so far.
   </p>
   <p>Go Baysie!</p>
+</div>
+<div id="r05" style="display: none">
+  <h3>Round 5</h3>
+  <p>
+    It was a cracking morning for footy as we welcomed Lysterfield again to our home ground. Was really nice to have our Baysie supporters cheer us on and to be
+    able to welcome out the under 11&rsquo;s and cheer them on after our game too!
+  </p>
+  <p>
+    Our team continues to show improvement week by week, and today was no exception. We witnessed some great passages of play, with each player contributing to
+    the team effort.
+  </p>
+  <p>
+    Cohen showcased his classiness by foot, hitting Harvey up field, who took a cracking mark and finished with a great goal, rewarding our efforts across the
+    ground.
+  </p>
+  <p>
+    Lewis's attack on the ball was nothing short of fantastic, a testament to the focus on this aspect during our training sessions. It was encouraging to see
+    the team responding positively and growing in confidence to be first to the footy.
+  </p>
+  <p>We demonstrated effective ball movement by hand, with Patrick and Lennox leading the charge in running the ball well and releasing their teammates.</p>
+  <p>
+    Xavier and Frankie added to the excitement by letting the crowd know they were rather happy with their finishes for goal on multiple occasions, to the cheer
+    of our supporters.
+  </p>
+  <p>
+    A big thank you to all our team officials and parent helpers for their ongoing support and dedication. Your contributions make a significant difference to
+    our team's enjoyment and success.
+  </p>
+  <p>We look forward to seeing everyone back on the track again this Friday as we continue to work hard and strive for improvement.</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
