--- a/teams-u13b-match-report.html
+++ b/teams-u13b-match-report.html
@@ -3,6 +3,8 @@
     if (window.location.search.includes('id=r01')) jQuery('#r01').show();
     else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
     else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
+    else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
+    else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -88,6 +90,62 @@
     glimpses already.
   </p>
   <p>This week's game will be another tough one and communication and hard ball gets will be the focus of this week's training.</p>
+</div>
+<div id="r04" style="display: none">
+  <h3>Round 4</h3>
+  <p>In the true spirit of Anzac day, our boys went into a game with 3 injured players bringing us down to 17.&nbsp;</p>
+  <p>We set some team goals today, quarter by quarter and broken up into sections of the ground, forwards, midfield and defenders.&nbsp;</p>
+  <p>
+    I think the boys tried their best to fulfil those goals each quarter. Chirnside Park got the jump on the boys early, our communication was down, which is
+    something we are really trying to emphasise and work on with the boys at training.&nbsp;
+  </p>
+  <p>
+    In the second quarter I asked the forwards to out score their opponent, and they did, kicking 1 goal 1, to Chirnside's 1 point. There was some great
+    passages of play, and good link up footy, that the boys played so well. We went into the half down, but not beaten.&nbsp;
+  </p>
+  <p>
+    Going into the 3rd quarter, only 2 goals down I really felt the boys were in this game. The ball did not bounce our way, but the boys pressed on. Our
+    pressure on the ball was good in parts and our delivery was mostly on point, the boys skill level is definitely increasing game by game. Chirnside know how
+    to play their ground though, they kicked long with the wind, and got 4 goals. The back line was attacking the ball at almost every contest, with at least
+    one cheeky goal scored by a wicked bounce.&nbsp;
+  </p>
+  <p>
+    In the last quarter we were 40 points down. I knew the boys were tired, and I asked them to really dig deep and finish this game with pride. The boys really
+    came together then, they put their bodies on the line, they played on when they could, they ran out of the backline in numbers and drove that ball forward
+    as a TEAM. Cooper L, ran out of the back line with protection, delivering the ball to Seth then he hit Lachy on the chest, that was probably the play of the
+    day for me and shows what you boys are really capable of !! We repeated almost that same play not long after, and Nolan took a great mark and delivered the
+    ball beautifully again to CHF. We out scored our opponent again in the last quarter, to which I was super proud of the effort you all put in today. You
+    didn't lie down and give up, you showed true fighting spirit and showed us how good you boys really can be, when you play for each other.<br />&nbsp;<br />Congratulations
+    to Lachy for winning the Anzac medal today as awarded by Chirnside Park.&nbsp;
+  </p>
+  <p>Guys there are so many positives out of today, keep your heads up.&nbsp;</p>
+  <p>We'd also like to express our condolences to the Dinnage family.&nbsp;</p>
+</div>
+<div id="r05" style="display: none">
+  <h3>Round 5</h3>
+  <p>
+    Congratulations to Cooper Leach who played his 50th game on Sunday. He had been sitting on 49 games for 3 weeks. It was great to have him back in the team.
+  </p>
+  <p>It was also great to get back on the winners board after two losses.</p>
+  <p>We had 9 individual goal kickers, led by Lachie with 7 majors, with Dusty, Cooper Leach, Phoenix and Marley all kicking multiple goals.</p>
+  <p>
+    Our game plan was to come out and assert some early dominance, so we decided to start with taller players in the middle, luckily this paid off creating an
+    early lead and by half time the game was pretty much over.
+  </p>
+  <p>Some other stand outs for the game:-</p>
+  <p>
+    Nolan for his tireless gut running up and down the wing all day. He helped in defence and created options in our forward line. He continues to improve each
+    week. What is even more astounding is the fact he hadn't touched a football until about 3 months ago and is still learning the rules.
+  </p>
+  <p>Ben for his last quarter playing in the midfield. Ben had been down on confidence and spending time on the ball saw his natural game style come back.</p>
+  <p>Austin, for his multiple 1% plays that don't count as a stat but helps the team</p>
+  <p>Cooper Lancaster for his 3 bounce run out of full back....wow, sometimes it looks like his feet don't hit the ground</p>
+  <p>
+    Overall we were pleased with the team game. All players worked together and it was the game style we've been working on for some time, so it's great to see
+    it come off.
+  </p>
+  <p>Well done to the boys on a great win.</p>
+  <p>P.S the ladder is up, the game against Croydon South didn't count as they were relegated after round 2, so we are sitting on 2 wins &amp; 2 losses.</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
