--- a/teams-u16g-match-report.html
+++ b/teams-u16g-match-report.html
@@ -4,6 +4,7 @@
     else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
     else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
     else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
+    else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -74,6 +75,29 @@
   <p>They are still a few things we need to work on to improve but most of our game was really good.</p>
   <p>Goals. Haylee 6, Shaylee 2, Chloe, Lara</p>
   <p>Best. Haylee, Milly, Matilda, Chloe, Shaylee, Jade, Shae, Sanvi, Riann, Lara</p>
+</div>
+<div id="r05" style="display: none">
+  <h3>Round 5</h3>
+  <p>We played South Croydon at home today.</p>
+  <p>Another really nice day for footy. Croydon South are a good team so we knew it was going to be a tough game today.</p>
+  <p>
+    The game started pretty even. Both teams had their moments when they had more of the ball. We had it a bit more in the first half of the quarter and Croydon
+    South in the second half of the quarter. Through inaccurate kicking by the other team, we were in front at quarter time.
+  </p>
+  <p>
+    The second quarter was the same as the first. Both teams had their moments but Croydon South were just working a little bit harder than us so able to get
+    the ball a bit more. This seemed to be the way the game continued in the second half. We were playing well at times but not nearly enough to try and reduce
+    Croydon South&rsquo;s lead and they increased their lead even more. The other team came home with a fairly relaxed win as they did control a lot more of the
+    ball than we did.
+  </p>
+  <p>
+    On reflection, we didn't have enough players that stood up. We probably had 6 solid performers for the day and that&rsquo;s not enough against the good
+    sides. It's really a few small things we need to get much better at but it definitely hurts our performance when we don&rsquo;t have enough players doing
+    them.
+  </p>
+  <p>We lost 40-16</p>
+  <p>Goals. Haylee 2</p>
+  <p>Best. Haylee, Matilda, Milly, Chloe, Tiarnah, Jade, Keelie, Keely</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
