--- a/teams-u12m-match-report.html
+++ b/teams-u12m-match-report.html
@@ -1,6 +1,7 @@
 <script type="text/javascript">
   jQuery(document).ready(function () {
     if (window.location.search.includes('id=r02')) jQuery('#r02').show();
+    else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -27,6 +28,17 @@
     of chances at goal, with Xavier kicking his second goal of the game. The players fort the game out with high spirits and enthusiasm.&nbsp;
   </p>
   <p>We played an outstanding team in Belgrave South and we must learn from today's game.</p>
+</div>
+<div id="r06" style="display: none">
+  <h3>Round 6</h3>
+  <p>
+    Hi all.&nbsp;<br />We took on Beaconsfield on their home ground, our first quarter was poor and our intent for the contest was missing. Our tackling was
+    poor too, many not prepared to commit to the tackle. 7 goals to them told the tale. We improved from there on and worked hard in the contest and had a lot
+    of the play, but got no reward for the hard work. The 3rd and 4th quarters were very much the same as the second quarter, lots of hard work but we struggled
+    to string together passages of play. We kept them to 8 goals for the last 3 quarters which was a credit to the team. We must keep working hard on our footy
+    skills, stick together. Noah playing his second game of football was great. Kai had a good game also and Grace had her best game. Will has put together 2
+    good games, but what has impressed me with Will has been his on field communication to his teammates.
+  </p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
