--- a/teams-u12m.html
+++ b/teams-u12m.html
@@ -53,5 +53,6 @@
   <h3 style="margin-top: 10px">MATCH REPORTS</h3>
   <ul>
     <li><a href="/u12m-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
+    <li><a href="/u12m-match-report/?id=r06" rel="nofollow">Round 6 Match Report</a></li>
   </ul>
 </div>
