--- a/teams-u14g-match-report.html
+++ b/teams-u14g-match-report.html
@@ -5,6 +5,7 @@
     else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
     else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
     else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
+    else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -152,6 +153,42 @@
   <p>
     We will reflect on the challenges and review what further changes we need to bring in and continue to work towards fixing the small things to reach our full
     potential.&nbsp;
+  </p>
+</div>
+<div id="r06" style="display: none">
+  <h3>Round 6</h3>
+  <p>
+    On a beautiful Mothers' Day morning, Raelene, who was celebrating her 50th Game, led the team out onto our home turf. Many of the players and people in the
+    crowd were wearing pink to mark Breast Cancer awareness.
+  </p>
+  <p>
+    We started the game off well, scoring the first goal in a hotly contested first few minutes. A late first quarter hiccup, and some unlucky bounces saw the
+    opposition score a couple of quick goals leading into the first break.
+  </p>
+  <p>
+    In the middle two quarters, as the intensity of the game picked up, we lost our way and gave away undisciplined free kicks. We did not mark closely when we
+    should have and gave away uncontested possession in key areas at critical times.&nbsp;
+  </p>
+  <p>
+    The final quarter saw our girls show the true grit and determination that we know they have. They went out there and played one of the best quarters of
+    football they have ever played. Unfortunately, a deep bench of six or seven players, and the opposition's rotation of fresh legs was the telling factor
+    again this week.
+  </p>
+  <p>
+    Pippa and Kyra showed that they are understanding their roles and what is required of them. Pippa with her quick hands and feet around the pack and Kyra
+    shutting down her opponent very effectively. &nbsp;Raelene and Leah rotated from the back line up to the centre of the park and they did an outstanding job.
+    Jess showed her speed and strong kicking up front and in defence. Lexie and Gemma teamed up well in the centre again this week. Lily played with an injury
+    and was limited in what she could do, but not wanting to let her teammates down, took to the field as well and we appreciate this gesture. Ava, Clara and
+    Lexie, although nursing back from injuries, played well today too.
+  </p>
+  <p>
+    Individually, the girls did extremely well and despite being up against 21 players, they held their own and we showed that we have the mettle to win games.
+  </p>
+  <p>Although they did not come away with the points they made their mothers, grandmothers, aunties and all the special women in their lives proud.&nbsp;</p>
+  <p>
+    We will work on picking up players, contesting marks and our hard ball gets will need to improve. We will also need to learn to reset quickly at stoppages
+    and neutralise the opposition overlapping runs.&nbsp;<br />Skills we can work on. The camaraderie, and the way the girls respect and have each other's back
+    cannot be established in training drills. They just have it.
   </p>
 </div>
 <div id="not-found" style="display: none">
