--- a/teams-u16g-match-report.html
+++ b/teams-u16g-match-report.html
@@ -5,6 +5,7 @@
     else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
     else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
     else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
+    else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -98,6 +99,26 @@
   <p>We lost 40-16</p>
   <p>Goals. Haylee 2</p>
   <p>Best. Haylee, Matilda, Milly, Chloe, Tiarnah, Jade, Keelie, Keely</p>
+</div>
+<div id="r06" style="display: none">
+  <h3>Round 6</h3>
+  <p>Today we played Montrose at their home ground.</p>
+  <p>
+    We had 5 players out due to injury or being sick so we weren&rsquo;t flush with numbers. One of the girls away was our captain so I was really keen for the
+    girls to lift to help cover the leadership we get from our captain.
+  </p>
+  <p>Our warm up wasn&rsquo;t great so I was a little worried that we weren&rsquo;t focused enough to start the game.</p>
+  <p>Much to my surprise, our leadership group started really well and set the tone for the other girls.</p>
+  <p>It was a very even game so it was going to come down to which team would do more things right and minimise the things they don&rsquo;t do so well.</p>
+  <p>
+    We took an early lead and we were able to maintain that for most of the game. We only had 1 on the bench compared to their 6 so I was a little concerned how
+    we would play the game out. As the game went on, Montrose started to close in on the lead we had. We lost a player due to injury and then we lost another,
+    so we played most of the last quarter with 1 player less than Montrose on the field.
+  </p>
+  <p>When things got really hard, I was really impressed that they all dug deep and pushed right to the end of the game. We ended up with a win by 3 points.</p>
+  <p>Score 17 &ndash; 14</p>
+  <p>Goals. Shaylee 2</p>
+  <p>Best. Keely, Ella, Milly, Shaylee, Jade, Haylee, Tiarnah,Chloe.</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
