--- a/teams-u14g-match-report.html
+++ b/teams-u14g-match-report.html
@@ -187,8 +187,8 @@
   <p>Although they did not come away with the points they made their mothers, grandmothers, aunties and all the special women in their lives proud.&nbsp;</p>
   <p>
     We will work on picking up players, contesting marks and our hard ball gets will need to improve. We will also need to learn to reset quickly at stoppages
-    and neutralise the opposition overlapping runs.&nbsp;<br />Skills we can work on. The camaraderie, and the way the girls respect and have each other's back
-    cannot be established in training drills. They just have it.
+    and neutralise the opposition overlapping runs. Skills we can work on. The camaraderie, and the way the girls respect and have each other's back cannot be
+    established in training drills. They just have it.
   </p>
 </div>
 <div id="not-found" style="display: none">
