--- a/teams-u15b-match-report.html
+++ b/teams-u15b-match-report.html
@@ -4,6 +4,8 @@
     else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
     else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
     else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
+    else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
+    else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -76,6 +78,31 @@
     games for the club. A special mention also must go out to Harry who had a stand out game, kicking 5 goals and winning the Anzac Day medal for Bayswater.
     &nbsp;&nbsp;
   </p>
+</div>
+<div id="r05" style="display: none">
+  <h3>Round 5</h3>
+  <p>
+    After missing out in the past few games by a goal or so, we were determined to get off to a fast start. Unfortunately it was North Ringwood that kicked away
+    early, to get up by a couple goals at the first break. During the second quarter the boys were hungry to claw their way back into the game. After lots of
+    good teamwork we managed to go into the half time break with our heads held high and be within a couple goals. During the third quarter, unfortunately North
+    Ringwood got the better of us to kick away to a healthy lead going into the final break. After being disappointed with the third quarter, the boys dug in
+    deep. We managed to kick a goal while limiting North Ringwood's scoring. Whilst the scoreboard showed North Ringwood winning by a healthy margin, it was
+    only the third quarter that really let us down.&nbsp;
+  </p>
+  <p>Keep working hard boys, a win is only around the corner.&nbsp;</p>
+</div>
+<div id="r06" style="display: none">
+  <h3>Round 6</h3>
+  <p>
+    After a tough week on the training track for the team, I went into the game feeling that we had a really good chance V Norwood. The sun was shining, the
+    ground looked fantastic, it was Mother's Day, everything just felt right. After last week's slowish start against North Ringwood, we again focused on
+    kicking early goals. During the first quarter we were able to kick four goals, to go into the first break feeling satisfied with our efforts. During the
+    second quarter the boys lifted again, getting out of second gear to kick five goals. During the half time break, we had a chat about taking the game out of
+    Norwood's hands early in the third quarter. To Norwood's credit, they got the jump on us to kick four goals to our one in the third. In the last quarter it
+    was goal for goal, but thankfully after a lot of recent heartache, where the close results didn't go our way, we finally got to taste success to win by 19
+    points.&nbsp;
+  </p>
+  <p>Well done on getting the win boys, very well deserved.&nbsp;</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
