--- a/teams-u11m-match-report.html
+++ b/teams-u11m-match-report.html
@@ -5,6 +5,7 @@
     else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
     else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
     else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
+    else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -148,6 +149,35 @@
     game, and a big special thanks to Sumeet for helping guide a new family with their role.
   </p>
   <p>It was great to sing the song as a team after our second win in a row, let&rsquo;s keep working as a team and keep our winning streak alive.</p>
+</div>
+<div id="r06" style="display: none">
+  <h3>Round 6</h3>
+  <p>
+    Our round 6 game fell on a very special day, Mother&rsquo;s Day, which saw us celebrate the day with a guard of honour by the Mums and an inspiring speech
+    by Caleb&rsquo;s Mum to get the team hyped up for a big game, thank you Lyndal. This round also supported Breast Cancer Network Australia with members of
+    the team wearing a touch of pink and making a gold coin donation for this great cause.
+  </p>
+  <p>
+    We were up against Upper Ferntree Gully at home and led out by Wes as captain who got us off to a flying start, kicking the first couple of goals for the
+    game. There was no looking back from there finishing with a convincing win.
+  </p>
+  <p>
+    Gordon and I were absolutely thrilled with the overall effort by the team, particularly having 8 separate goal kickers highlighting our willingness to share
+    the ball around and find a player in a better position. Our control with the ball in hand, and ability to move the ball by finding an open player and
+    hitting the target, continues to improve week by week and is becoming a real strength of how we play and is having a huge impact on our ability to score
+    well, and in particular capitalise on our opportunities by kicking goals.
+  </p>
+  <p>
+    Our pressure around the ball and contested play continues to be a real strength for us and it&rsquo;s great to see improvements in the areas we have been
+    working on like shepherding and blocking for a teammate, attacking the contest in the air, with some more great spoils this week, and quick handballs to get
+    the ball to a teammate in space.
+  </p>
+  <p>
+    Thanks to our parent helpers on the day, Angus, Levi T, Emmalee, Mitch and Josh O&rsquo;s families for helping to ensure our kids get to play and enjoy the
+    game.
+  </p>
+  <p>It was great to sing the song as a team again, that&rsquo;s three in a row, let&rsquo;s keep working as a team and keep our winning streak alive.</p>
+  <p>Go Baysie!</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
